<resources>
    <string name="app_name">TestTask</string>
    <string name="logo">Logo</string>
    <string name="info">info</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="name_">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone</string>
    <string name="error">Error</string>
    <string name="choose_an_email">Choose an Email client :</string>
    <string name="tel">tel: </string>
    <string name="failure">Failure </string>
</resources>