<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_10">

    <androidx.cardview.widget.CardView
        android:id="@+id/image_card_view"
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_100"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/size_250"
        app:layout_constraintBottom_toTopOf="@+id/info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/size_95"
            android:layout_height="@dimen/size_95"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/size_250">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:layout_constraintDimensionRatio="1:1" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:fontFamily="casual"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_10"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/image_card_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_5"
        android:fontFamily="casual"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_10"
        android:textStyle="normal"
        app:layout_constraintLeft_toRightOf="@+id/image_card_view"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/info"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_card_view" />
</androidx.constraintlayout.widget.ConstraintLayout>