<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15"
        android:fontFamily="casual"
        android:text="@string/name_"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_10"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_10"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/name_title"
        app:layout_constraintTop_toTopOf="@+id/name_title" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15"
        android:fontFamily="casual"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_10"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_title" />

    <TextView
        android:id="@+id/email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_10"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/email_title"
        app:layout_constraintTop_toTopOf="@+id/email_title" />

    <TextView
        android:id="@+id/phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15"
        android:fontFamily="casual"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_10"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_title" />

    <TextView
        android:id="@+id/phone_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_10"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/phone_title"
        app:layout_constraintTop_toTopOf="@+id/phone_title" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0"
        android:layout_margin="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_15"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintTop_toBottomOf="@+id/phone_title" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0"
        android:layout_marginTop="@dimen/margin_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webView" />


</androidx.constraintlayout.widget.ConstraintLayout>